--- a/app/src/main/res/layout/fragment_department_dayjournal.xml
+++ b/app/src/main/res/layout/fragment_department_dayjournal.xml
@@ -6,6 +6,7 @@
 
 
     <LinearLayout
+        android:id="@+id/ll_calendar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/white"
