--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,6 +63,12 @@
         <item name="android:textSize">@dimen/Text36</item>
     </style>
 
+    <!--较黑18-->
+    <style name="Text18">
+        <item name="android:textColor">@color/colorIconText</item>
+        <item name="android:textSize">@dimen/text_size_18</item>
+    </style>
+
     <!--浅色 36-->
     <style name="HintText">
         <item name="android:textColor">@color/colorContext</item>
