--- a/app/src/main/res/layout/item_team_ranking.xml
+++ b/app/src/main/res/layout/item_team_ranking.xml
@@ -48,15 +48,15 @@
             android:textSize="@dimen/text_size_14" />
 
         <TextView
+            android:id="@+id/tv_ranking"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
             android:layout_alignBottom="@+id/tv_captain"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/tv_team_name"
             android:layout_marginRight="20dp"
             android:gravity="center"
-            android:text="第4名"
+
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/text_size_14" />
     </RelativeLayout>
