--- a/app/src/main/res/layout/fragment_department_dayjournal.xml
+++ b/app/src/main/res/layout/fragment_department_dayjournal.xml
@@ -24,6 +24,7 @@
         <TextView
             android:id="@+id/tv_date"
             style="@style/ContentText"
+            android:paddingLeft="10dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
