--- a/app/src/main/res/layout/activity_ht_daysum_details.xml
+++ b/app/src/main/res/layout/activity_ht_daysum_details.xml
@@ -34,8 +34,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/ContentText"
-            android:text="@string/A_customer"/>
+            style="@style/ContentText" />
 
     </LinearLayout>
 
