选择审批人、写日志参数修改、详情

--- a/app/src/main/res/layout/item_weeksum_foot.xml
+++ b/app/src/main/res/layout/item_weeksum_foot.xml
@@ -30,6 +30,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:padding="10dp">
