--- a/app/src/main/res/layout/dialog_calendar_select.xml
+++ b/app/src/main/res/layout/dialog_calendar_select.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@drawable/shape_rounded_rectangle_white_bg">
 
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
