--- a/app/src/main/res/layout/item_daysum_foot.xml
+++ b/app/src/main/res/layout/item_daysum_foot.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@android:color/white">
+              android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/ll_daysum_addjob"
         android:padding="10dp"
+        android:background="@android:color/white"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,6 +30,8 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:layout_marginTop="10dp"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:padding="10dp">
