--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -137,7 +137,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:paddingTop="5dp"
-                android:text="ORM营销"
+                android:text="CRM营销"
                 android:textColor="#939699"
                 android:textSize="13dp" />
 
