--- a/app/src/main/res/layout/activity_my_call_record.xml
+++ b/app/src/main/res/layout/activity_my_call_record.xml
@@ -6,9 +6,22 @@
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/titlebar_height" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_view"
+    <com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout
+        android:id="@+id/swipeToLoadLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent">
+
+        <include
+            android:id="@id/swipe_refresh_header"
+            layout="@layout/layout_refresh_header" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@id/swipe_target"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <include
+            android:id="@id/swipe_load_more_footer"
+            layout="@layout/layout_loadmore_footer" />
+
+    </com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout>
 </LinearLayout>
