--- a/app/src/main/res/layout/activity_xs_dayplan_details.xml
+++ b/app/src/main/res/layout/activity_xs_dayplan_details.xml
@@ -33,8 +33,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/ContentText"
-            android:text="@string/A_customer"/>
+            style="@style/ContentText" />
 
     </LinearLayout>
     
@@ -45,6 +44,7 @@
         android:background="@color/white"
         app:tabTextAppearance="@style/ContentText"
         app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabIndicatorColor="@color/colorPrimary"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
     </android.support.design.widget.TabLayout>
