--- a/app/src/main/res/layout/fragment_daysum_hkdd.xml
+++ b/app/src/main/res/layout/fragment_daysum_hkdd.xml
@@ -4,103 +4,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-
-    <LinearLayout
+    <ListView
+        android:id="@+id/lvload"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Customer_name"
-                style="@style/HintText"/>
-
-            <TextView
-                android:id="@+id/tv_daysum_hkdd"
-                style="@style/ContentText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Customer_type"
-                style="@style/HintText"/>
-
-            <TextView
-                android:id="@+id/tv_customer_type"
-                style="@style/ContentText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Product_type"
-                style="@style/HintText"/>
-
-            <TextView
-                android:id="@+id/tv_product_type"
-                style="@style/ContentText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Getmoney"
-                style="@style/HintText"/>
-
-            <TextView
-                android:id="@+id/tv_getmoney"
-                style="@style/ContentText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+    </ListView>
 
 </LinearLayout>
