--- a/app/src/main/res/layout/fragment_daysum_workplan.xml
+++ b/app/src/main/res/layout/fragment_daysum_workplan.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,18 +17,15 @@
                 android:id="@+id/lv_work_plan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp">
-            </com.wtcrmandroid.view.listview.MyListView>
+                android:layout_marginBottom="10dp"></com.wtcrmandroid.view.listview.MyListView>
 
             <com.wtcrmandroid.view.listview.MyListView
                 android:id="@+id/iv_comment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </com.wtcrmandroid.view.listview.MyListView>
+                android:layout_height="wrap_content"></com.wtcrmandroid.view.listview.MyListView>
 
 
         </LinearLayout>
-
 
     </ScrollView>
 
