--- a/app/src/main/res/layout/item_add_ppcustomer.xml
+++ b/app/src/main/res/layout/item_add_ppcustomer.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground"
+    android:orientation="vertical">
 
 
     <RelativeLayout
@@ -14,11 +15,11 @@
 
         <TextView
             android:id="@+id/iv_dayplan_sort"
+            style="@style/ContentText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="事项等级:"
-            style="@style/ContentText"/>
+            android:text="事项等级:" />
 
         <TextView
             android:id="@+id/tv_major_sort"
@@ -27,8 +28,7 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/iv_dayplan_sort"
             android:hint="@string/hint_sort"
-            android:paddingLeft="10dp"
-            />
+            android:paddingLeft="10dp" />
 
         <ImageView
             android:id="@+id/iv_delete"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:src="@mipmap/ic_xrz_delete"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
@@ -44,50 +44,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_marginTop="1dp">
 
         <TextView
+            style="@style/ContentText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="@string/Customer_name"
-            style="@style/ContentText"/>
+            android:text="@string/Customer_name" />
 
         <EditText
-            style="@style/EditTextStyle"
             android:id="@+id/et_major_name"
+            style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:hint="@string/hint__name"
-            android:paddingLeft="10dp"
-            />
+            android:paddingLeft="10dp" />
 
 
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:padding="20dp">
 
         <TextView
+            style="@style/ContentText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="@string/fengxi_genjin"
-            style="@style/ContentText"/>
+            android:text="@string/fengxi_genjin" />
 
         <EditText
-            style="@style/EditTextStyle"
             android:id="@+id/et_major_analysis"
+            style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:hint="@string/hint_genjin"
-            android:paddingLeft="10dp"
-            />
+            android:paddingLeft="10dp" />
 
 
     </LinearLayout>
