--- a/app/src/main/res/layout/item_get_single_customer.xml
+++ b/app/src/main/res/layout/item_get_single_customer.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    android:background="@color/colorBackground">
 
     <RelativeLayout
         android:id="@+id/rl_single_sort"
@@ -39,6 +40,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
@@ -66,6 +68,7 @@
 
     <LinearLayout
         android:id="@+id/ll_if_get"
+        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
@@ -93,6 +96,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
@@ -119,6 +123,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
