--- a/app/src/main/res/layout/item_xs_xrjh_foot.xml
+++ b/app/src/main/res/layout/item_xs_xrjh_foot.xml
@@ -40,20 +40,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/analysis"
+            android:textSize="@dimen/text_size_16"
             android:textColor="@color/colorIconText"/>
 
-        <ImageView
+        <TextView
+            android:id="@+id/tv_single"
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_grayright_arrow"/>
-
-
+            android:drawableRight="@mipmap/ic_grayright_arrow"
+            android:textSize="@dimen/text_size_16"
+            android:drawablePadding="5dp"
+            android:textColor="@color/colorContext"/>
 
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/rl_dayplan_genjin"
         android:padding="10dp"
+        android:layout_marginTop="1dp"
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -61,23 +66,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_16"
             android:text="@string/genjin"
             android:textColor="@color/colorIconText"/>
 
-        <ImageView
-            android:id="@+id/iv_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_grayright_arrow"/>
 
         <TextView
-            android:id="@+id/tv_genjin"
-            android:layout_toLeftOf="@id/iv_arrow"
-            android:layout_marginRight="5dp"
+            android:id="@+id/tv_major"
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="已完成"
+            android:drawableRight="@mipmap/ic_grayright_arrow"
+            android:textSize="@dimen/text_size_16"
+            android:drawablePadding="5dp"
             android:textColor="@color/colorContext"/>
 
 
